--- a/index.html
+++ b/index.html
@@ -43,5 +43,89 @@
         </div>
       </div>
     </header>
+
+    <section id="home">
+      <div class="container">
+        <div class="home-wrapper">
+          <div class="description">
+            <h1 class="title">Learn Any Foreign Language</h1>
+            <p>
+              With our teachers who write a program for each student, you will
+              be able to make your first sketch after the first lesson.
+            </p>
+            <button class="btn btn-primary">Get started</button>
+          </div>
+          <div class="image">
+            <img src="./images/image_1.png" alt="home" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="skills">
+      <div class="container">
+        <h3 class="title">Skills</h3>
+
+        <div class="skills-wrapper">
+          <div class="speaking child">
+            <div class="image">
+              <img src="./images/skill.png" alt="skill" />
+            </div>
+            <h4>Speaking</h4>
+            <p>
+              Improve your English skills and confidence. Live classes and
+              interactive lessons online. 20% extra free for a limited time only
+            </p>
+            <p>
+              Improve your English skills and confidence. Live classes and
+              interactive lessons online. 20% extra free for a limited time only
+            </p>
+            <button class="btn btn-primary">Learn more</button>
+          </div>
+          <div class="other">
+            <div class="top">
+              <div class="writing child">
+                <div class="image">
+                  <img src="./images/image_2.png" alt="skill" />
+                </div>
+                <h4>Speaking</h4>
+                <p>
+                  One of the most important and extensive areas of natural
+                  science, the science that studies substances, also their
+                  composition
+                </p>
+                <button class="btn btn-primary">Learn more</button>
+              </div>
+              <div class="reading child">
+                <div class="image">
+                  <img src="./images/image_2.png" alt="skill" />
+                </div>
+                <h4>Speaking</h4>
+                <p>
+                  One of the most important and extensive areas of natural
+                  science, the science that studies substances, also their
+                  composition
+                </p>
+                <button class="btn btn-primary">Learn more</button>
+              </div>
+            </div>
+            <div class="bottom">
+              <div class="bottom-left">
+                <h4>Speaking</h4>
+                <p>
+                  One of the most important and extensive areas of natural
+                  science, the science that studies substances, also their
+                  composition
+                </p>
+                <button class="btn btn-primary">Learn more</button>
+              </div>
+              <div class="image">
+                <img src="./images/image_2.png" alt="skill" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
